app/styles/app.scss
@mixin hand-ff {
  font-family: "marydale", sans-serif;
}

@mixin futura-ff {
  font-family: "futura-pt-condensed",sans-serif;
  font-style: italic;
  text-align: center;
  text-transform: uppercase;
  font-weight: 600;
}

@mixin hot-bg {
  // /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c02425+0,f0cb35+100 */
  background: #c02425; /* Old browsers */
  background: -moz-linear-gradient(top,  #c02425 0%, #f0cb35 100%); //* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #c02425 0%,#f0cb35 100%); //* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #c02425 0%,#f0cb35 100%); //* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c02425', endColorstr='#f0cb35',GradientType=0 ); //* IE6-9 */
}

@mixin grey-bg {
  // /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e0eafc+0,cfdef3+100 */
  background: #e0eafc; /* Old browsers */
  background: -moz-linear-gradient(top,  #e0eafc 0%, #cfdef3 100%); //* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #e0eafc 0%,#cfdef3 100%); //* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #e0eafc 0%,#cfdef3 100%); //* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e0eafc', endColorstr='#cfdef3',GradientType=0 ); //* IE6-9 */
}

@mixin dark-bg {
  // /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#4b79a1+0,283e51+100 */
  background: #4b79a1; /* Old browsers */
  background: -moz-linear-gradient(top,  #4b79a1 0%, #283e51 100%); //* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #4b79a1 0%,#283e51 100%); //* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #4b79a1 0%,#283e51 100%); //* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b79a1', endColorstr='#283e51',GradientType=0 ); //* IE6-9 */
}

* {
  box-sizing: border-box;
}

h1, h2 {
  font-weight: normal;
  margin: 0;
}

body {
  border: 5px solid #fff;
  width: 100%;
  margin: 0 auto;
  @include hot-bg;
  height: 100%;
  .container {
    text-align: center;
  }
}

html {
  height: 100%;
}

h1 {
  @include futura-ff;
  color: #fff;
  font-size: 120px;
  text-align: center;
  font-weight: bold;
}

h2 {
  @include futura-ff;
  color: #fff;
  font-size: 40px;
  font-size: 80px;
}

#description {
  margin-bottom: 20px;
}

button {
  -webkit-appearance: none;
  border: none;
  background: none;
  @include futura-ff;
  color: #fff;
  margin: 0 auto;
  border: 5px solid #fff;
  font-size: 20px;
  display: block;
}

#tweet {
  display: none;
}

footer {
  @include futura-ff;
  margin: 50px auto 0;
  font-size: 24px;
  text-transform: uppercase;
}

footer a {
  color: #fff;
  text-decoration: none;
  border-bottom: 1px solid #fff;
}

@media screen and (max-width: 700px) {
  h1 {
    font-size: 40px;
  }
  #outcome {
    font-size: 20px;
  }
}

